# speech_to_text

./: .gitignore  LICENSE  README.md  main.py  requirements.txt  setup.cfg  setup.py
speechtotext/: __init__.py  __main__.py  about.py  entry.py
speechtotext/speech_to_text/: speech_to_text.py
speechtotext/tests/: conftest.py
speechtotext/tests/unit/speechtotext/: test_speechtotext.py
src/: about.py  entry.py  utils.py
src/speech_to_text/: speech_to_text.py
