[metadata]
name = speech-to-text-az-interface
version = attr: speechtotext.__version__
author = attr: speechtotext.__author__
author_email = attr: speechtotext.__email__
description = attr: speechtotext.__description__
long_description = file: README.md
url=https://github.com/jonathanvanleeuwen/speech_to_text
project_urls=
        Bug Tracker = https://github.com/jonathanvanleeuwen/speech_to_text/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
requires_python = >=3.6
include_package_data = True
zip_safe = False
packages = find:
install_requires =
    argh==0.26.2
    azure-cognitiveservices-speech==1.19.0
    pytest==6.2.4
    python-dotenv==0.19.1
tests_require =
    pytest==6.2.5

[options.packages.find]
exclude =
    speechtotext.tests
    speechtotext.tests.*

[options.package_data]
* = *.json, *.ps1, *.py, *.txt, *.conf, *.wav, *.md